users stats api and frontend token refresh
